# FLOrbit

./: .gitmodules  LICENSE  README.md  index.html  pyproject.toml
examples/: README.md  introduction.ipynb
outputs/2024-04-09/10-29-02/.hydra/: hydra.yaml
outputs/2024-04-09/10-34-30/.hydra/: hydra.yaml
outputs/2024-04-09/10-34-44/.hydra/: hydra.yaml
outputs/2024-04-09/10-37-10/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-09/10-37-21/.hydra/: hydra.yaml
outputs/2024-04-09/11-09-30/.hydra/: hydra.yaml
outputs/2024-04-09/11-10-02/.hydra/: hydra.yaml
outputs/2024-04-09/11-10-23/.hydra/: config.yaml  hydra.yaml
outputs/2024-04-09/11-10-43/.hydra/: hydra.yaml
outputs/2024-04-09/11-11-27/.hydra/: hydra.yaml
outputs/2024-04-09/14-18-22/.hydra/: config.yaml  hydra.yaml
src/federated_learning/: client.py  constants.py  dataset.py  dataset_preparation.py  main.py  models.py  utils.py
src/federated_learning/conf/: base.yaml
