[tool.poetry]
name = "florbit"
version = "0.1.0"
description = "Federated Learning for Orbital Operations."
authors = ["WilliamLindskog <williamlindskog@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
torch = "^2.2.1"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
